# fillers

./: README.md  pyproject.toml
.github/workflows/: python.yml
src/: main.py
src/fillers/: __init__.py  bleach.py  naruto.py  scrape.py  shippuden.py  show.py
tests/: test_show.py
